--- a/catch-object-game/public/index.html
+++ b/catch-object-game/public/index.html
@@ -29,8 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <canvas id="main"></canvas>
-      <!-- <div id="info"></div> -->
+      <canvas id="main" width="300" height="600"></canvas>
     </div>
     <!--
       This HTML file is a template.
